--- a/package.json
+++ b/package.json
@@ -1,21 +1,49 @@
 {
-  "name": "express-jwt-postgres-roles",
+  "name": "defect-tracking-system",
   "version": "1.0.0",
+  "description": "Система управления дефектами для строительных проектов",
   "main": "app.js",
-  "license": "MIT",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "backup": "node scripts/backup.js create",
+    "restore": "node scripts/backup.js restore",
+    "list-backups": "node scripts/backup.js list",
+    "test": "jest --coverage",
+    "lint": "eslint ."
   },
+  "keywords": [
+    "defect-tracking",
+    "project-management",
+    "construction"
+  ],
+  "author": "",
+  "license": "MIT",
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "dotenv": "^16.0.0",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "csurf": "^1.11.0",
+    "dotenv": "^16.3.1",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "pg": "^8.10.0",
-    "sequelize": "^6.32.1"
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.35.2",
+    "validator": "^13.11.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.0.2",
+    "eslint": "^8.56.0",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
+  },
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
   }
 }
